[project]
name = "runpod-httpx-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.4",
    "httpx-sse>=0.4.0",
    "httpx>=0.27.2",
    "pytest-asyncio>=0.24.0",
    "pytest-watcher>=0.4.3",
    "pytest>=8.3.3",
    "runpod>=1.7.4",
    "sse-starlette>=2.1.3",
    "starlette>=0.41.2",
    "uuid7>=0.1.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
